--- a/Optimizely.Xamarin.Droid.TestApp/Optimizely.Xamarin.Droid.TestApp.csproj
+++ b/Optimizely.Xamarin.Droid.TestApp/Optimizely.Xamarin.Droid.TestApp.csproj
@@ -70,6 +70,12 @@
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Optimizely.Xamarin.Droid\Optimizely.Xamarin.Droid.csproj">
+      <Project>{f316cf0b-a082-484c-b33c-2600bec08374}</Project>
+      <Name>Optimizely.Xamarin.Droid</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
      Other similar extension points exist, see Microsoft.Common.targets.
