--- a/Optimizely.Xamarin.Droid/Optimizely.Xamarin.Droid.csproj
+++ b/Optimizely.Xamarin.Droid/Optimizely.Xamarin.Droid.csproj
@@ -54,6 +54,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Additions\LiveVariable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
