--- a/Optimizely.Xamarin.Droid.TestApp/Optimizely.Xamarin.Droid.TestApp.csproj
+++ b/Optimizely.Xamarin.Droid.TestApp/Optimizely.Xamarin.Droid.TestApp.csproj
@@ -232,9 +232,9 @@
       <Project>{3dc9f99a-2d77-4cdf-9b68-c8e9d1e345e2}</Project>
       <Name>Optimizely.View</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Optimizely.Xamarin.Droid\Optimizely.Xamarin.Droid.csproj">
+    <ProjectReference Include="..\Optimizely.Xamarin.Droid\Optimizely.Core.csproj">
       <Project>{f316cf0b-a082-484c-b33c-2600bec08374}</Project>
-      <Name>Optimizely.Xamarin.Droid</Name>
+      <Name>Optimizely.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
